# sensitive-data-masking

./: .env.example  .gitignore  Dockerfile  README.md  app.py  demo.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
scripts/: download_models.py  download_models.sh  project_name.txt  start.sh  stop.sh
