[project]
name = "sensitive-data-masking"
version = "0.1.0"
description = "基于 NLP 的中文敏感信息识别与脱敏工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.0.0",
    "gradio>=6.1.0",
]


[dependency-groups]
paddle = [
    "paddlepaddle>=2.6.0",
    "paddlenlp>=2.8.0",
    "aistudio-sdk==0.2.1",
    "setuptools>=75.0.0",
]

dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
]

[tool.uv]
package = false


[tool.mypy]
strict = true
exclude = ["venv", ".venv"]

[[tool.mypy.overrides]]
module = ["paddlenlp.*", "paddle.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG001"]
ignore = ["E501", "B008"]
